--- a/src/css/Base.css
+++ b/src/css/Base.css
@@ -60,8 +60,8 @@
 }
 
 .gradient-background-reverse-active {
-  background-image: -webkit-gradient(linear, right top, left top, from(#f4fefa), to(#40514e));
-  background-image: linear-gradient(to left, #f4fefa, #40514e);
+  background-image: -webkit-gradient(linear, right top, left top, from(#40514e), to(#f4fefa));
+  background-imaxge: linear-gradient(to left, #f4fefa, #40514e);
 }
 
 .gradient-text-reverse {
@@ -114,7 +114,7 @@
   overflow-y: auto;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 100px) {
   .flexcontainer-inline .xs-12 {
     /* width:100%; */
     -webkit-box-flex: 0;
@@ -245,5 +245,10 @@
 
 .block-padding {
   padding: 15px 10px;
+}
+
+.frameless {
+  border: none;
+  background-color: inherit;
 }
 /*# sourceMappingURL=Base.css.map */
