--- a/src/css/Assistant.css
+++ b/src/css/Assistant.css
@@ -17,7 +17,7 @@
       grid-template-columns: 1fr 1fr 1fr 3fr;
   -ms-grid-rows: 8fr 1fr 1fr 1fr 1fr;
       grid-template-rows: 8fr 1fr 1fr 1fr 1fr;
-      grid-template-areas: 'chat-box chat-box chat-box chat-box' 'left-wing-area dump0 right-wing-area dump1' 'dump2 body-area dump3 dump3' 'dump2 body-area dump3 dump3' 'dump2 body-area dump3 dump3';
+      grid-template-areas: "chat-box chat-box chat-box chat-box" "left-wing-area dump0 right-wing-area dump1" "dump2 body-area dump3 dump3" "dump2 body-area dump3 dump3" "dump2 body-area dump3 dump3";
   grid-gap: 0px;
   padding: 0px;
 }
