--- a/src/css/DialogBox.css
+++ b/src/css/DialogBox.css
@@ -52,7 +52,7 @@
       grid-template-columns: 1fr;
   -ms-grid-rows: auto 1fr auto;
       grid-template-rows: auto 1fr auto;
-      grid-template-areas: 'header' 'body' 'footer';
+      grid-template-areas: "header" "body" "footer";
   grid-gap: 0px;
   padding: 0px;
 }
