--- a/src/css/Layout.scss
+++ b/src/css/Layout.scss
@@ -1,37 +1,39 @@
 .mainGrid {
-    height: "100%"
-  }
+  height: "100%";
+}
 .scrollableCell {
-    height: "auto";
-    overflow-y: "auto"
-  }
+  height: "auto";
+  overflow-y: "auto";
+}
 
-  .main-layout-grid {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto 3fr 1fr auto;
-    grid-template-areas: 
-    'leftbar header rightbar'
-    'content content content'
-    'footer footer footer';
-    grid-gap: 0px;
-    padding: 0px;
-  }
-  .left-sidebar-container {
-    grid-area: leftbar;
-  }
-  .right-sidebar-container {
-    grid-area: rightbar;
-  }
-  .navbar-container {
-grid-area: header;
-  }
-  .footer-container {
-grid-area: footer;
-  }
-  .main-container {
-grid-area: content;
-
-height: auto;
-overflow-y: auto
-  }
+.main-layout-grid {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    "leftbar header rightbar"
+    "content content content"
+    "footer footer footer";
+  grid-gap: 0px;
+  padding: 0px;
+}
+.left-sidebar-container {
+  grid-area: leftbar;
+}
+.right-sidebar-container {
+  grid-area: rightbar;
+}
+.navbar-container {
+  grid-area: header;
+}
+.footer-container {
+  grid-area: footer;
+}
+.main-container {
+  grid-area: content;
+  height: -webkit-fill-available;
+  overflow-y: auto;
+}
+.block-width {
+  max-width: 653.5px;
+}
