--- a/src/css/transitions.scss
+++ b/src/css/transitions.scss
@@ -2,233 +2,236 @@
 /* durations and timing functions.              */
 /* TRANSITION GROUP 1 
    simple fade */
-   .fade-enter {
-    opacity: 0;
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  
-  .fade-enter-active {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  .fade-exit {
-    opacity: 1;
-  }
-  
-  .fade-exit-active {
-    opacity: 0;
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  /* TRANSITION GROUP 2 
+.fade-enter {
+  opacity: 0;
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+}
+
+.fade-enter-active {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+/* TRANSITION GROUP 2 
      slide from left */
-  .slide-fade-left-enter {
-    opacity: 0;
-    -webkit-transform: translateX(600px);
-            transform: translateX(600px);
-  }
-  
-  .slide-fade-left-enter-active {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  .slide-fade-left-exit {
-    opacity: 0.9;
-  }
-  
-  .slide-fade-left-exit-active {
-    opacity: 0;
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  /* slide from right */
-  .slide-fade-right-enter {
-    opacity: 0;
-    -webkit-transform: translateX(-600px);
-            transform: translateX(-600px);
-  }
-  
-  .slide-fade-right-enter-active {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  .slide-fade-right-exit {
-    opacity: 0.9;
-  }
-  
-  .slide-fade-right-exit-active {
-    opacity: 0;
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-    -webkit-transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, -webkit-transform 300ms;
-    transition: opacity 300ms, transform 300ms;
-    transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
-  }
-  
-  /* TRANSITION GROUP 3
+.slide-fade-left-enter {
+  opacity: 0;
+  -webkit-transform: translateX(600px);
+  transform: translateX(600px);
+}
+
+.slide-fade-left-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+.slide-fade-left-exit {
+  opacity: 0.9;
+}
+
+.slide-fade-left-exit-active {
+  opacity: 0;
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+/* slide from right */
+.slide-fade-right-enter {
+  opacity: 0;
+  -webkit-transform: translateX(-600px);
+  transform: translateX(-600px);
+}
+
+.slide-fade-right-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+.slide-fade-right-exit {
+  opacity: 0.9;
+}
+
+.slide-fade-right-exit-active {
+  opacity: 0;
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, -webkit-transform 300ms;
+  transition: opacity 300ms, transform 300ms;
+  transition: opacity 300ms, transform 300ms, -webkit-transform 300ms;
+}
+
+/* TRANSITION GROUP 3
      slide from left normally */
-  .slide-left-enter {
-    opacity: 0;
-    -webkit-transform: translateX(-600px);
-            transform: translateX(-600px);
-  }
-  
-  .slide-left-enter-active {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    -webkit-transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, transform 500ms;
-    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
-  }
-  
-  .slide-left-exit {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  
-  .slide-left-exit-active {
-    opacity: 0;
-    -webkit-transform: translateX(-600px);
-            transform: translateX(-600px);
-    -webkit-transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, transform 500ms;
-    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
-  }
-  
-  /* slide from right normally */
-  .slide-right-enter {
-    opacity: 0;
-    -webkit-transform: translateX(600px);
-            transform: translateX(600px);
-  }
-  
-  .slide-right-enter-active {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    -webkit-transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, transform 500ms;
-    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
-  }
-  
-  .slide-right-exit {
-    opacity: 0.9;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  
-  .slide-right-exit-active {
-    opacity: 0;
-    -webkit-transform: translateX(600px);
-            transform: translateX(600px);
-    -webkit-transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, -webkit-transform 500ms;
-    transition: opacity 500ms, transform 500ms;
-    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
-  }
-  
-  /* slide down normally */
-    $slideDownTime : 500ms;
-  .slide-down-enter {
-    opacity: 0;
-    -webkit-transform: translateY(-300px);
-            transform: translateY(-300px);
-  }
-  
-  .slide-down-enter-active {
-    opacity: 0.9;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
-    transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
-    transition: opacity $slideDownTime, transform $slideDownTime;
-    transition: opacity $slideDownTime, transform $slideDownTime, -webkit-transform $slideDownTime;
-  }
-  
-  .slide-down-exit {
-    opacity: 0.9;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  
-  .slide-down-exit-active {
-    opacity: 0;
-    -webkit-transform: translateY(-300px);
-            transform: translateY(-300px);
-    -webkit-transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
-    transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
-    transition: opacity $slideDownTime, transform $slideDownTime;
-    transition: opacity $slideDownTime, transform $slideDownTime, -webkit-transform $slideDownTime;
-  }
+.slide-left-enter {
+  opacity: 0;
+  -webkit-transform: translateX(-600px);
+  transform: translateX(-600px);
+}
 
+.slide-left-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, transform 500ms;
+  transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
+}
 
-  // slide up normally
-    /* slide down normally */
-    $slideUpTime : 1500ms;
-    .slide-up-enter {
-      opacity: 0;
-      -webkit-transform: translateY(300px);
-              transform: translateY(300px);
-    }
-    
-    .slide-up-enter-active {
-      opacity: 0.9;
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      -webkit-transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
-      transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
-      transition: opacity $slideUpTime, transform $slideUpTime;
-      transition: opacity $slideUpTime, transform $slideUpTime, -webkit-transform $slideUpTime;
-    }
-    
-    .slide-up-exit {
-      opacity: 0.9;
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-    }
-    
-    .slide-up-exit-active {
-      opacity: 0;
-      -webkit-transform: translateY(300px);
-              transform: translateY(300px);
-      -webkit-transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
-      transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
-      transition: opacity $slideUpTime, transform $slideUpTime;
-      transition: opacity $slideUpTime, transform $slideUpTime, -webkit-transform $slideUpTime;
-    }
-  /*# sourceMappingURL=transitions.css.map */
+.slide-left-exit {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.slide-left-exit-active {
+  opacity: 0;
+  -webkit-transform: translateX(-600px);
+  transform: translateX(-600px);
+  -webkit-transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, transform 500ms;
+  transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
+}
+
+/* slide from right normally */
+.slide-right-enter {
+  opacity: 0;
+  -webkit-transform: translateX(600px);
+  transform: translateX(600px);
+}
+
+.slide-right-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, transform 500ms;
+  transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
+}
+
+.slide-right-exit {
+  opacity: 0.9;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.slide-right-exit-active {
+  opacity: 0;
+  -webkit-transform: translateX(600px);
+  transform: translateX(600px);
+  -webkit-transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, -webkit-transform 500ms;
+  transition: opacity 500ms, transform 500ms;
+  transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
+}
+
+/* slide down normally */
+$slideDownTime: 500ms;
+.slide-down-enter {
+  opacity: 0;
+  -webkit-transform: translateY(-300px);
+  transform: translateY(-300px);
+}
+
+.slide-down-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  -webkit-transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
+  transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
+  transition: opacity $slideDownTime, transform $slideDownTime;
+  transition: opacity $slideDownTime, transform $slideDownTime,
+    -webkit-transform $slideDownTime;
+}
+
+.slide-down-exit {
+  opacity: 0.9;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+.slide-down-exit-active {
+  opacity: 0;
+  -webkit-transform: translateY(-300px);
+  transform: translateY(-300px);
+  -webkit-transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
+  transition: opacity $slideDownTime, -webkit-transform $slideDownTime;
+  transition: opacity $slideDownTime, transform $slideDownTime;
+  transition: opacity $slideDownTime, transform $slideDownTime,
+    -webkit-transform $slideDownTime;
+}
+
+// slide up normally
+/* slide down normally */
+$slideUpTime: 700ms;
+.slide-up-enter {
+  opacity: 0;
+  -webkit-transform: translateY(300px);
+  transform: translateY(300px);
+}
+
+.slide-up-enter-active {
+  opacity: 0.9;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  -webkit-transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
+  transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
+  transition: opacity $slideUpTime, transform $slideUpTime;
+  transition: opacity $slideUpTime, transform $slideUpTime,
+    -webkit-transform $slideUpTime;
+}
+
+.slide-up-exit {
+  opacity: 0.9;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+.slide-up-exit-active {
+  opacity: 0;
+  -webkit-transform: translateY(300px);
+  transform: translateY(300px);
+  -webkit-transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
+  transition: opacity $slideUpTime, -webkit-transform $slideUpTime;
+  transition: opacity $slideUpTime, transform $slideUpTime;
+  transition: opacity $slideUpTime, transform $slideUpTime,
+    -webkit-transform $slideUpTime;
+}
+/*# sourceMappingURL=transitions.css.map */
