--- a/src/css/QuizHandler.css
+++ b/src/css/QuizHandler.css
@@ -1,13 +1,53 @@
 .info-block {
   display: inline-block;
-  width: 80px;
-  text-align: left;
+  text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .info-text {
   display: inline-block;
-  width: 45px;
+  min-width: 45px;
   text-align: center;
   padding: 0px 10px;
+}
+
+.quiz-handler-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "body-area" "information-area";
+  grid-gap: 0px;
+  padding: 0px;
+  width: auto;
+  margin: auto;
+}
+
+.question-box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: body-area;
+}
+
+.result-box {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: body-area;
+}
+
+.information-box {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: information-area;
+}
+
+@media screen and (max-width: 400px) {
+  .info-block {
+    max-width: 150px;
+  }
 }
 /*# sourceMappingURL=QuizHandler.css.map */
