--- a/src/css/DialogBox.css
+++ b/src/css/DialogBox.css
@@ -5,10 +5,21 @@
   min-height: 300px;
 }
 
+.dialog-box input {
+  text-align: center;
+  color: inherit;
+  font-size: inherit;
+  background-color: inherit;
+  width: 85%;
+  border-width: 0.5px 0.5px 1px 1px;
+  border-top-left-radius: calc(0.3rem - 1px);
+  border-top-right-radius: calc(0.3rem - 1px);
+}
+
 .dialog-header {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  grid-area: header;
+  grid-area: header-area;
   padding: 1rem 0rem;
   margin-bottom: 0;
   color: inherit;
@@ -20,13 +31,13 @@
 .dialog-body {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
-  grid-area: body;
+  grid-area: body-area;
 }
 
 .dialog-footer {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
-  grid-area: footer;
+  grid-area: footer-area;
   vertical-align: bottom;
   padding: 1rem 0rem;
 }
@@ -52,18 +63,8 @@
       grid-template-columns: 1fr;
   -ms-grid-rows: auto 1fr auto;
       grid-template-rows: auto 1fr auto;
-      grid-template-areas: "header" "body" "footer";
+      grid-template-areas: "header-area" "body-area" "footer-area";
   grid-gap: 0px;
   padding: 0px;
-}
-
-.dialog-box input {
-  text-align: center;
-  color: inherit;
-  font-size: inherit;
-  background-color: inherit;
-  border-width: 0.5px 0.5px 1px 1px;
-  border-top-left-radius: calc(0.3rem - 1px);
-  border-top-right-radius: calc(0.3rem - 1px);
 }
 /*# sourceMappingURL=DialogBox.css.map */
