--- a/src/css/Layout.css
+++ b/src/css/Layout.css
@@ -49,6 +49,7 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: content;
+  height: 100vh;
   height: -webkit-fill-available;
   overflow-y: auto;
 }
