Readme file updated to nclude Demo URL

--- a/src/css/Base.scss
+++ b/src/css/Base.scss
@@ -96,7 +96,7 @@
     from(#40514e),
     to(#f4fefa)
   );
-  background-imaxge: linear-gradient(to left, #f4fefa, #40514e);
+  background-image: linear-gradient(to left, #f4fefa, #40514e);
 }
 
 .gradient-text-reverse {
